# Dockerd-View

./: BACKEND_PROMPT-dockerd.md  Docker-Dashboard.html  README.md  docker-compose.yml  scratch_dc.js
backend/: Dockerfile  pyproject.toml
backend/app/: collector.py  config.py  docker_client.py  events.py  main.py  metrics.py  models.py
backend/tests/: test_collector.py  test_config.py  test_docker_client.py  test_events.py  test_main.py  test_metrics.py  test_models.py
docs/superpowers/plans/: 2026-07-02-fastapi-backend.md
docs/superpowers/specs/: 2026-07-02-fastapi-backend-design.md
